<resources>
    <string name="app_name" translatable="false">Coffee Station</string>

    <string name="usuario">Usuario</string>
    <string name="correo">Correo electrónico</string>
    <string name="telefono">Número de teléfono</string>
    <string name="fecha">Fecha de nacimiento</string>

    <string name="eTexto_correo">Correo electrónico:</string>
    <string name="eTexto_contrasena">Contraseña:</string>
    <string name="eTexto_usuario">Usuario:</string>
    <string name="eTexto_telefono">Número de Teléfono:</string>
    <string name="eTexto_fecha">Fecha de Nacimiento:</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_register">Regístrate.</string>
    <string name="btn_help">Obtén ayuda.</string>
    <string name="btn_create">Crear</string>
    <string name="vTexto_help">¿Olvidaste tus datos de inicio de sesión?</string>
    <string name="vTexto_register">¿Aún no tienes cuenta?</string>
    <string name="vTexto_crea">Crea tu cuenta</string>
    <string name="vTexto_or_reister">O Regístrate con</string>
    <string name="msg_usuario">Campo para ingresar su usuario</string>
    <string name="msg_contraseña">Campo para ingresar su contraseña</string>
    <string name="fallo_registro">Falló el registro del usuario</string>
    <string name="fallo_login">Falló el login del usuario</string>
    <string name="btn_next">Siguiente</string>
    <string name="vTexto_accede">Acceder a tu cuenta</string>
    <string name="accede_op_01">Enviar un correo electrónico</string>
    <string name="accede_op_02">Enviar un SMS</string>
    <string name="vTexto_recupera">Recupera tu cuenta</string>
    <string name="vTexto_recupera_02">Ingresa tu nombre de usuario, correo electrónico o número de teléfono asociado a tu cuenta.</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="info_obten_ayuda">Ingresa tu nombre de usuario, correo electrónico o número de teléfono asociado a tu cuenta.</string>

    <string name="general">General</string>
    <string name="herramientas">Herramientas</string>
    <string name="CalificarApp">Calificar App</string>
    <string name="descripcion">Descripción</string>
    <string name="chat">Chat en Vivo</string>
    <string name="Acerca">Acerca de</string>

    <string name="descripcion_int">Descripción</string>
    <string name="like">¿Te gusta Coffee Station?</string>
    <string name="instruccion">Toca una estrella para calificar la app en la Play Store.</string>
    <string name="info_int_descripcion">Coffee Station es una aplicación que proporciona un servicio de cafeterías virtuales sin embargo, la aplicación es expansible (escalabilidad) con opciones para los usuarios de visitar y seleccionar sus cafeterías favoritas con interfaces y menús únicos para cada una de ellas.</string>
    <string name="negacion">Ahora No</string>
    <string name="acerca_int">Acerca de</string>
    <string name="contactarnos">Puede contactarnos vía correo electrónico</string>
    <string name="mas_info">Para más información visite</string>

    <string name="notificaciones">Notificaciones</string>
    <string name="info_notificaciones">Ajustes de notificaciones</string>
    <string name="idioma">Idioma</string>
    <string name="version">Versión</string>
    <string name="info_version">1.0</string>

    <string name="interfaz_notif">Permitir todas las notificaciones</string>
    <string name="barra_busqueda">Buscar por nombre...</string>

    <string name="contacto">Contacto</string>
    <string name="menu">Menú</string>
    <string name="ubicacion">Ubicación</string>

    <string name="aperitivos">Aperitivos</string>
    <string name="cafes">Cafés</string>

    <string name="carrito">Carrito de compras</string>
    <string name="producto">Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="total">Total</string>
    <string name="comentarios">Comentarios</string>
    <string name="en_total">Envío total</string>
    <string name="metodo_pago">Elija su método de pago</string>
    <string name="tarjeta">Tarjeta De Regalo y Códigos</string>
    <string name="terminos">Estoy de acuerdo con los términos del servicio. (Lea las Condiciones del servicio)</string>
    <string name="comprar">Comprar</string>

    <string name="compra_realizada">Compra realizada con éxito </string>
    <string name="agradecimiento">Gracias</string>
    <string name="msg_compra">La empresa le agradece mucho que haya comprado con nosotros y confiado en nuestros productos.</string>
    <string name="msg_compra_dos">Estaremos a tu disposición para cualquier duda. Síguenos en redes o envíanos un mail.</string>
    <string name="despedida">Esperamos tu regreso...</string>

    <string name="de">Por:</string>
    <string name="descrip_cafe">Descripción:</string>
    <string name="cafe_descrip">El capuchino es una bebida nacida en Italia, preparada con café espresso y leche montada con vapor para darle cremosidad. Un capuchino se compone de 125 ml de leche y 25 ml de café espresso</string>
    <string name="precio">Precio:</string>
    <string name="anadir">Añadir al carrito</string>

    <string name="menu_cafeteria">Cafetería</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_acept">Aceptar</string>
    <string name="fallo_completar_espacios">Complete los espacios requeridos</string>
    <string name="btn_ver_mas">Ver Más</string>

    <string name="cafe_capp">Café Cappuccino</string>
    <string name="boutique_cafe">Boutique Café</string>
    <string name="bajo_sombra">Cafetería Bajo Sombra</string>
    <string name="precio_capp">₡ 1300</string>

    <string name="frappucino">Frappuccino</string>
    <string name="info_frapp">Frappuccino es un acrónimo de frappé y cappuccino, un café expreso con espuma de leche. también se vende como bebida en botella en las tiendas y en máquinas expendedoras</string>
    <string name="precio_frapp">₡ 3400</string>

    <string name="cold_brew">Cold Brew</string>
    <string name="info_cold">Este café que se infusiona en frío, según varios estudios, es un 60% menos ácido y amargo que los cafés que se preparan en caliente. </string>
    <string name="precio_cold">₡ 2100</string>

    <string name="moca">Café Moca</string>
    <string name="info_moca">Un café moca es una variante del café con leche. Como este, suele llevar un tercio de expreso y dos tercios de leche vaporizada, pero se añade una parte de chocolate, los mochas contienen chocolate negro o con leche.</string>
    <string name="precio_moca">₡ 3000</string>

    <string name="frio">Cafe Frío</string>
    <string name="info_frio">El café frío, es básicamente una forma de preparar el café, en el que los granos ya tostados y molidos se sumergen dentro de agua a temperatura fría o ambiente.</string>
    <string name="precio_frio">₡ 2775</string>

    <string name="lagrima">Café Lagrima</string>
    <string name="info_lagrima">El café lagrima es una forma de preparar café que consiste en una taza con un tercio de café y la restante leche</string>
    <string name="precio_lagrima">₡ 3115</string>

    <string name="cafe_negro">Café Negro</string>
    <string name="info_cn">Bebida que se prepara con café molido y agua, consumido por lo general en todas partes de México. Antiguamente se hacía sólo con café de grano.</string>
    <string name="precio_cn">₡ 1900</string>

    <string name="ristretto">Ristretto</string>
    <string name="info_ris">Ristretto en italiano significa “limitado o restringido”, por lo que el café ristretto no es más que un espresso corto preparado con la misma cantidad de café, pero extraído con la mitad de agua.</string>
    <string name="precio_ris">₡ 1500</string>

    <string name="latte">Café Latte</string>
    <string name="info_latte">El café latte es el hermano mayor del capuchino, donde todo gira en torno a la espuma suave y sedosa.</string>
    <string name="precio_latte">₡ 1150</string>

    <string name="precio_lagrima_bc">₡ 3195</string>

    <string name="doppio">Doppio</string>
    <string name="info_doppio">Un doppio es un café espresso hecho con dos cargas, extraído utilizando un filtro de café doble.</string>
    <string name="precio_doppio">₡ 1175</string>

    <string name="affogato">Affogato</string>
    <string name="info_affogato">El affogato es un postre hecho con dos ingredientes principales: helado de vainilla y café espresso.</string>
    <string name="precio_affogato">₡ 1550</string>

    <string name="precio_ris_bc">₡ 1400</string>

    <string name="precio_cold_bc">₡ 1950</string>

    <string name="expresso">Café Expresso</string>
    <string name="info_exp">El espresso es una bebida intensa de café, preparada a alta temperatura a alta presión y en un corto espacio de tiempo.</string>
    <string name="precio_exp">₡ 1600</string>

    <string name="vienes">Café Vienés</string>
    <string name="info_vie">El café vienés es un café expreso cubierto con nata batida o montada. Se llama así por ser muy característico de los cafés de Viena y Budapest.</string>
    <string name="precio_vie">₡ 1750</string>

    <string name="btn_comprar">Comprar</string>
    <string name="btn_term">Estoy de acuerdo con los términos del servicio. (Lea las Condiciones del servicio)</string>
    <string name="tarjeta_de_regalo">Tarjeta de Regalo</string>
    <string name="tarjeta_de_pago">Tarjeta de Crédito o Débito</string>
    <string name="paypal">Paypal</string>
    <string name="btn_ok">Ok</string>
    <string name="anadido">Añadido</string>
    <string name="total_product">Total Productos</string>
    <string name="favoritos">Favoritos</string>
    <string name="fallo_permisos">Debe habilitar el permiso</string>
    <string name="fallo_mensaje">Favor añadir comentarios</string>
    <string name="vista_comen">Lista de comentarios</string>
    <string name="recuperar">Recuperar</string>
    <string name="eliminar">Eliminar</string>
    <string name="enviar">Enviar</string>
    <string name="actualizar">Actualizar</string>
    <string name="enviado">Comentario Enviado Con Éxito</string>
    <string name="falta">No hay comentarios</string>
    <string name="id_cliente_web" translatable="false">131166778397-f6dsmcu12i8frnlsq1hgi2oqhdhq5ka9.apps.googleusercontent.com</string>
</resources>